<resources>
    <string name="app_name">AppZNOv1201</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="start_logo_zno">ЗНО</string>
    <string name="start_logo_wordlist">Wordlist</string>
    <string name="start_logo_text_top">Твій помічник у</string>
    <string name="start_logo_text_bottom">вивчені слів до ЗНО!</string>

    <string name="nav_menu">Меню</string>
    <string name="learn">Вивчаю</string>
    <string name="nav_buy_the_whole_course">Придбати курс</string>
    <string name="nav_evaluate_the_application">Оцінити додаток</string>
    <string name="nav_share_with_friends">Поділитися з друзями</string>
    <string name="nav_contact_us">Зв\'язатися з нами</string>
    <string name="nav_settings">Налаштування</string>

    <string name="bottom_words">Уроки</string>
    <string name="bottom_course">Курс</string>
    <string name="bottom_profile">Профіль</string>
    <string name="title_profile">Мій профіль</string>

    <string name="course_header_top">Вивчай слова у контексті</string>
    <string name="course_header_bottom">Каталог тем за програмою ЗНО</string>
    <string name="course_bottom_main">У контексті ти запам\'ятовуєш:</string>
    <string name="course_bottom_child_1">- словосполучення</string>
    <string name="course_bottom_child_2">- правильні прийменники</string>
    <string name="course_bottom_child_3">- правильну граматику</string>
    <string name="course_bottom_child_4">- отримуєш шаблони для спілкування</string>

    <string name="course_units">Юніти</string>
    <string name="course_lessons">Уроки</string>
    <string name="course_tests">Тести</string>
</resources>