<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogoActivity">

    <ImageView
        android:id="@+id/im_logo_start"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginTop="204dp"
        android:src="@drawable/start_logo_cup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/start_logo_cup" />

    <TextView
        android:id="@+id/tv_start_logo_zno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mont_black"
        android:text="@string/start_logo_zno"
        android:textColor="@color/BOTTOM_SELECTED"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_start_logo"
        app:layout_constraintStart_toStartOf="@+id/view_start_logo"
        app:layout_constraintTop_toTopOf="@+id/view_start_logo" />

    <TextView
        android:id="@+id/tv_start_logo_text_top"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/mon_ex_bold"
        android:gravity="center"
        android:text="@string/start_logo_text_top"
        android:textColor="@color/DARK_COLOR"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_start_logo" />

    <TextView
        android:id="@+id/tv_start_logo_wordlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mont_black"
        android:text="@string/start_logo_wordlist"
        android:textColor="@color/PROFILE_PROGRESSBAR_COLOR"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_start_logo_zno"
        app:layout_constraintEnd_toEndOf="@+id/view_start_logo"
        app:layout_constraintTop_toTopOf="@+id/tv_start_logo_zno" />

    <TextView
        android:id="@+id/tv_start_logo_text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mon_ex_bold"
        android:text="@string/start_logo_text_bottom"
        android:textColor="@color/DARK_COLOR"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_logo_text_top" />

    <View
        android:id="@+id/view_start_logo"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_logo_start" />

</androidx.constraintlayout.widget.ConstraintLayout>